# code-review-agent

./: README.md  main.py  pyproject.toml  requirements.txt
backend/: diff_parser.py  graph.py  main.py  models.py  renderer.py  state.py
backend/api/: routes.py  schemas.py
backend/nodes/: bug_reviewer.py  deterministic_filter.py  parse_diff.py  render_review.py  reviewer_utils.py  security_reviewer.py  semantic_supervisor.py  static_tools.py  test_reviewer.py
backend/tools/: bandit_tool.py  ruff_tool.py
evals/: README.md  golden_dataset.json  run_evals.py  scorers.py
evals/test_diffs/: auth_bypass_001.diff
frontend/: app.py
scripts/: run_review.py
tests/: test_deterministic_filter.py  test_diff_parser.py  test_graph_smoke.py  test_renderer.py  test_static_tools.py
