[project]
name = "code-review-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bandit>=1.9.4",
    "fastapi>=0.136.1",
    "langchain>=1.2.16",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.7.38",
    "pydantic>=2.13.3",
    "ruff>=0.15.12",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
